# crypto_trading_multi_agents

./: .coverage  .env.example  .gitignore  API_SPECIFICATION.md  ARCHITECTURE_DESIGN.md  DATA_COLLECTION_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_SUPPORT_SYSTEMS.md  SOLANA_ANALYSIS_SUMMARY.md  analyze_eth_defi.py  config.json  demo_signal_recognition.py  docker-compose.yml  eth_defi_analysis_demo.py  example_usage.py  prometheus.yml  pyproject.toml  requirements.txt  requirements_full.txt  requirements_web.txt  setup.py  solana_analysis_report.json  start_web.py  system_test_results_20250813_130140.json  system_test_results_20250813_130335.json  system_test_results_20250813_130407.json  system_test_results_20250813_130438.json  system_test_results_20250813_130733.json  system_test_results_20250813_132522.json  system_test_results_20250813_132927.json  system_test_results_20250813_153353.json  system_test_results_20250813_155341.json  system_test_results_20250813_184622.json  test_basic.py  test_config_logging.py  test_core.py  (+18 more)
.claude/prds/: 交易执行代理.md  做多分析师代理.md  做空分析师代理.md  加密货币多agent交易系统.md  数据收集代理.md  新闻收集代理.md  智能交易决策代理.md  社交媒体分析代理.md  风险仓位管理代理.md
.serena/: project.yml
.serena/memories/: ai_enhancement_completion_report.md  analyst_relationships_and_ai_fusion.md  analysts_algorithm_frameworks_overview.md  analysts_run_function_implementation.md  bear_researcher_duality_correction_completed.md  bull_bear_researcher_asymmetry_analysis.md  bull_researcher_implementation_analysis.md  code_conventions.md  crypto_trading_code_conventions.md  crypto_trading_development_commands.md  crypto_trading_project_overview.md  debator_integration_completion_summary.md  debator_syntax_errors_fix_2025.md  debator_system_completion_final_report.md  defi_analyst_btc_handling_analysis.md  defi_analyst_current_analysis_2025.md  defi_analyst_real_data_integration_summary.md  defillama_data_source_extension_plan.md  development_commands.md  directory_cleanup_operations.md  directory_cleanup_operations_2025_08_06.md  documentation_organization_2025_08_06.md  llm_framework_vs_langchain_comparison.md  market_maker_analyst_detailed_analysis.md  project_architecture.md  (+31 more)
benchmarks/: exchange_manager_benchmark.py
config/: analysis_config.yaml  batch_config.yaml  deduplication_config.yaml  llm_config.yaml  news_sources.yaml  processing_config.yaml  quality_rules.yaml  short_analyst.yaml
configs/: development.yaml  exchange_manager_config.yaml  production.yaml  testing.yaml
crypto_trading_agents/: __init__.py
data_sources/: exchange_data_sources.py
database/: __init__.py
docs/: AI_ENHANCED_TECHNICAL_ANALYSIS.md  API_DOCUMENTATION.md  CCXT_DATA_GUIDE.md  CONFIGURATION_AND_LOGGING.md  Crypto_Trading_Agents_Design_Document.md  DATA_COLLECTOR.md  DEVELOPER_GUIDE.md  INSTALLATION.md  LLM_Integration_Plan.md  REFACTORING_SUMMARY.md  SENTIMENT_AI_INTEGRATION_REPORT.md  USER_GUIDE.md  enhanced_exchange_manager.md  sentiment_analyst_upgrade_plan.md  tasks_031_032_implementation.md
examples/: example_defi_ai_usage.py  example_new_kline_system.py  example_sentiment_ai_standalone.py  example_sentiment_ai_usage.py  monitoring_example.py  reporting_example.py
prompts/: sentiment_analysis.yaml  summarization.yaml
tests/: README.md  check_llm_config.py  complete_solana_analysis.py  conftest.py  debug_ai.py  debug_llm_init.py  defi_analyst_test.py  detailed_llm_test.py  onchain_data_test.py  run_tests.py  simple_defi_test.py  solana_ai_analysis_test.py  solana_data_test.py  solana_direct_test.py  test_comprehensive.py  test_data_collector.py  test_data_processing_pipeline.py  test_indicator_engine.py  test_indicators_simple.py  test_llm_analysis.py  test_llm_integration.py  test_llm_service.py  test_monitoring_system.py  test_performance_benchmarks.py  test_reporting_system.py  test_results.json  test_signal_recognition.py  ton_analyst_test.py  ton_data_test.py  ton_direct_test.py  ton_simple_test.py
(+481 files in other folders)
