[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-data-collection"
version = "1.0.0"
description = "Cryptocurrency trading data collection agent"
authors = [
    {name = "Crypto Trading Multi-Agents System", email = "dev@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.3.0",
    "ccxt>=4.0.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.19.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.15.0",
    "structlog>=22.3.0",
    "python-dotenv>=0.21.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "aiofiles>=0.8.0",
    "asyncio-mqtt>=0.11.0",
    "timescaledb-psycopg2>=0.6.0",
    "loguru>=0.6.0",
    "aioredis>=2.0.0",
    "cryptography>=38.0.0",
    "requests>=2.28.0",
    "websockets>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=3.0.0",
    "httpx>=0.23.0",
    "black>=22.6.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.10.0",
    "alembic>=1.8.0",
    "memory-profiler>=0.60.0",
    "psutil>=5.9.0",
]
ml = [
    "scikit-learn>=1.1.0",
    "tensorflow>=2.9.0",
    "torch>=1.12.0",
]
monitoring = [
    "celery>=5.2.0",
    "great-expectations>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/cys813/crypto_trading_multi_agents"
Documentation = "https://github.com/cys813/crypto_trading_multi_agents#readme"
Repository = "https://github.com/cys813/crypto_trading_multi_agents.git"
"Bug Tracker" = "https://github.com/cys813/crypto_trading_multi_agents/issues"

[project.scripts]
data-collector = "src.data_collection.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["src/data_collection/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"